Added Regression Algorithms

--- a/Regression/sklearn/1.linear_model/13.Theil Sen Regression.ipynb
+++ b/Regression/sklearn/1.linear_model/13.Theil Sen Regression.ipynb
@@ -5,18 +5,18 @@
    "id": "3ded4e8c",
    "metadata": {},
    "source": [
-    "# Lasso Regression"
+    "# Theil Sen Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ab4c9a24",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import TheilSenRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2d9a669c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "d347bb56",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "49a6a65d",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "[506 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "566ec013",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "[506 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "12ced728",
    "metadata": {},
    "outputs": [],
@@ -426,29 +426,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "873a6327",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Lasso()"
+       "TheilSenRegressor(max_subpopulation=10000)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor = Lasso()\n",
+    "regressor = TheilSenRegressor()\n",
     "regressor.fit(featuresTrain, labelsTrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "e0779b3c",
    "metadata": {},
    "outputs": [],
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "3e8c92e9",
    "metadata": {},
    "outputs": [
@@ -468,8 +476,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 5.285227216526919\n",
-      "R2 Score 0.6595433415591938\n"
+      "RMSE 5.112429132996157\n",
+      "R2 Score 0.6814415652529249\n"
      ]
     }
    ],
@@ -483,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "27b4c5a5",
    "metadata": {},
    "outputs": [
@@ -492,8 +500,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 5.2144472389231895\n",
-      "R2 Score 0.693670187075003\n"
+      "RMSE 4.8946932575252085\n",
+      "R2 Score 0.7300870812261564\n"
      ]
     }
    ],
