--- a/Regression/lightgbm/Light Gradient Boosted Machine(LGBM) Regression.ipynb
+++ b/Regression/lightgbm/Light Gradient Boosted Machine(LGBM) Regression.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4e7af69",
+   "id": "3ded4e8c",
    "metadata": {},
    "source": [
-    "# Linear Regression"
+    "# Light Gradient Boosted Machine(LGBM) Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2aa9a04d",
+   "execution_count": 1,
+   "id": "ab4c9a24",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from lightgbm import LGBMRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b4a7ab4",
+   "id": "2d9a669c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3ef1250f",
+   "execution_count": 3,
+   "id": "d347bb56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2492efed",
+   "execution_count": 4,
+   "id": "49a6a65d",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[506 rows x 13 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "abc84c7d",
+   "execution_count": 5,
+   "id": "566ec013",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "[506 rows x 1 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9e989b6a",
+   "execution_count": 6,
+   "id": "12ced728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,30 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "67aa3904",
+   "execution_count": 14,
+   "id": "873a6327",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LinearRegression()"
+       "LGBMRegressor()"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor = LinearRegression()\n",
+    "regressor = LGBMRegressor()\n",
     "regressor.fit(featuresTrain, labelsTrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "4d75472e",
+   "execution_count": 15,
+   "id": "e0779b3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,8 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b9c32a30",
+   "execution_count": 16,
+   "id": "3e8c92e9",
    "metadata": {},
    "outputs": [
     {
@@ -468,8 +468,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 4.813372882363403\n",
-      "R2 Score 0.7176202687340321\n"
+      "RMSE 1.51939044408536\n",
+      "R2 Score 0.9718632917041212\n"
      ]
     }
    ],
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "469c52c6",
+   "execution_count": 17,
+   "id": "27b4c5a5",
    "metadata": {},
    "outputs": [
     {
@@ -492,8 +492,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 4.392692690521766\n",
-      "R2 Score 0.7826126074271011\n"
+      "RMSE 3.852341118594365\n",
+      "R2 Score 0.8328054244462898\n"
      ]
     }
    ],
