--- a/Regression/statsmodels/1.Ordinary Least Squares (OLS) - Error.ipynb
+++ b/Regression/statsmodels/1.Ordinary Least Squares (OLS) - Error.ipynb
@@ -5,7 +5,7 @@
    "id": "3ded4e8c",
    "metadata": {},
    "source": [
-    "# Tweedie Regression"
+    "# Ordinary Least Squares (OLS)"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.linear_model import TweedieRegressor\n",
+    "from statsmodels.api import OLS\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -426,46 +426,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "873a6327",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  return f(*args, **kwargs)\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_glm\\glm.py:287: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "TweedieRegressor()"
+       "<statsmodels.regression.linear_model.RegressionResultsWrapper at 0x12b8c335820>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor = TweedieRegressor()\n",
-    "regressor.fit(featuresTrain, labelsTrain)"
+    "regressor = OLS(featuresTrain, labelsTrain)\n",
+    "regressor.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "1b47a338",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'OLS' object has no attribute 'summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20848/3868032091.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'OLS' object has no attribute 'summary'"
+     ]
+    }
+   ],
+   "source": [
+    "regressor.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e0779b3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (354,1) and (354,13) not aligned: 1 (dim 1) != 354 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20848/228402815.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrainPredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeaturesTrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtestPredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeaturesTest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\statsmodels\\regression\\linear_model.py\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, params, exog)\u001b[0m\n\u001b[0;32m    378\u001b[0m             \u001b[0mexog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexog\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 380\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexog\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_distribution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_class\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (354,1) and (354,13) not aligned: 1 (dim 1) != 354 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "trainPredictions = regressor.predict(featuresTrain)\n",
     "testPredictions = regressor.predict(featuresTest)"
@@ -482,8 +504,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 5.325385471613834\n",
-      "R2 Score 0.6543499651253458\n"
+      "RMSE 1.51939044408536\n",
+      "R2 Score 0.9718632917041212\n"
      ]
     }
    ],
@@ -506,8 +528,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 5.303234682986155\n",
-      "R2 Score 0.683149495297056\n"
+      "RMSE 3.852341118594365\n",
+      "R2 Score 0.8328054244462898\n"
      ]
     }
    ],
