--- a/Regression/xgboost/eXtreme Gradient(XG) Boost Regressor.ipynb
+++ b/Regression/xgboost/eXtreme Gradient(XG) Boost Regressor.ipynb
@@ -5,7 +5,7 @@
    "id": "3ded4e8c",
    "metadata": {},
    "source": [
-    "# Ridge Regression"
+    "# eXtreme Gradient(XG) Boost Regression"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.linear_model import Ridge\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -426,29 +426,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "873a6327",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ridge()"
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, enable_categorical=False,\n",
+       "             gamma=0, gpu_id=-1, importance_type=None,\n",
+       "             interaction_constraints='', learning_rate=0.300000012,\n",
+       "             max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+       "             monotone_constraints='()', n_estimators=100, n_jobs=4,\n",
+       "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
+       "             reg_lambda=1, scale_pos_weight=1, subsample=1, tree_method='exact',\n",
+       "             validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor = Ridge()\n",
+    "regressor = XGBRegressor()\n",
     "regressor.fit(featuresTrain, labelsTrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e0779b3c",
    "metadata": {},
    "outputs": [],
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3e8c92e9",
    "metadata": {},
    "outputs": [
@@ -468,8 +476,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 4.831872702486795\n",
-      "R2 Score 0.7154454888738826\n"
+      "RMSE 0.015792782792115826\n",
+      "R2 Score 0.9999969601522588\n"
      ]
     }
    ],
@@ -483,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "27b4c5a5",
    "metadata": {},
    "outputs": [
@@ -492,8 +500,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 4.452713434164017\n",
-      "R2 Score 0.7766313587327417\n"
+      "RMSE 3.4517869455709507\n",
+      "R2 Score 0.865766574050506\n"
      ]
     }
    ],
