--- a/Regression/sklearn/7.ensemble/8.Voting Regressor.ipynb
+++ b/Regression/sklearn/7.ensemble/8.Voting Regressor.ipynb
@@ -5,18 +5,18 @@
    "id": "3ded4e8c",
    "metadata": {},
    "source": [
-    "# Stacking Regressor"
+    "# Voting Regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "ab4c9a24",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.ensemble import StackingRegressor, RandomForestRegressor\n",
+    "from sklearn.ensemble import VotingRegressor, RandomForestRegressor\n",
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.svm import LinearSVR\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "2d9a669c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "d347bb56",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "49a6a65d",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "[506 rows x 13 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "566ec013",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "[506 rows x 1 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "12ced728",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "873a6327",
    "metadata": {},
    "outputs": [
@@ -439,29 +439,17 @@
       "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  return f(*args, **kwargs)\n",
       "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  warnings.warn(\"Liblinear failed to converge, increase \"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "StackingRegressor(estimators=[('lr', RidgeCV(alphas=array([ 0.1,  1. , 10. ]))),\n",
-       "                              ('svr', LinearSVR(random_state=42))],\n",
-       "                  final_estimator=RandomForestRegressor(n_estimators=6,\n",
-       "                                                        random_state=42))"
+       "VotingRegressor(estimators=[('lr', RidgeCV(alphas=array([ 0.1,  1. , 10. ]))),\n",
+       "                            ('svr', LinearSVR(random_state=42))])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,19 +459,15 @@
     "    ('lr', RidgeCV()),\n",
     "    ('svr', LinearSVR(random_state=42))\n",
     "]\n",
-    "regressor = StackingRegressor(\n",
+    "regressor = VotingRegressor(\n",
     "    estimators=estimators,\n",
-    "    final_estimator = RandomForestRegressor(\n",
-    "        n_estimators=6,\n",
-    "        random_state=42\n",
-    "    )\n",
     ")\n",
     "regressor.fit(featuresTrain, labelsTrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "e0779b3c",
    "metadata": {},
    "outputs": [],
@@ -494,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "3e8c92e9",
    "metadata": {},
    "outputs": [
@@ -503,8 +487,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 4.751407595318329\n",
-      "R2 Score 0.7248439400935411\n"
+      "RMSE 5.169182234243878\n",
+      "R2 Score 0.674329671021759\n"
      ]
     }
    ],
@@ -518,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "27b4c5a5",
    "metadata": {},
    "outputs": [
@@ -527,8 +511,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 4.654944158307279\n",
-      "R2 Score 0.7558809554156798\n"
+      "RMSE 4.825798415863193\n",
+      "R2 Score 0.7376318797972725\n"
      ]
     }
    ],
