--- a/Regression/sklearn/Polynomial Regression.ipynb
+++ b/Regression/sklearn/Polynomial Regression.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ded4e8c",
+   "id": "b4e7af69",
    "metadata": {},
    "source": [
-    "# Stacking Regressor"
+    "# Polynomial Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "ab4c9a24",
+   "execution_count": 39,
+   "id": "2aa9a04d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.ensemble import StackingRegressor, RandomForestRegressor\n",
-    "from sklearn.linear_model import RidgeCV\n",
-    "from sklearn.svm import LinearSVR\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2d9a669c",
+   "execution_count": 2,
+   "id": "6b4a7ab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d347bb56",
+   "execution_count": 3,
+   "id": "3ef1250f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "49a6a65d",
+   "execution_count": 4,
+   "id": "2492efed",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[506 rows x 13 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "566ec013",
+   "execution_count": 5,
+   "id": "abc84c7d",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[506 rows x 1 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,8 +418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "12ced728",
+   "execution_count": 6,
+   "id": "9e989b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,74 +428,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "873a6327",
+   "execution_count": 42,
+   "id": "2ffb1cb0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  return f(*args, **kwargs)\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n",
-      "C:\\Users\\PS\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:985: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\"Liblinear failed to converge, increase \"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "StackingRegressor(estimators=[('lr', RidgeCV(alphas=array([ 0.1,  1. , 10. ]))),\n",
-       "                              ('svr', LinearSVR(random_state=42))],\n",
-       "                  final_estimator=RandomForestRegressor(n_estimators=6,\n",
-       "                                                        random_state=42))"
+       "LinearRegression()"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimators = [\n",
-    "    ('lr', RidgeCV()),\n",
-    "    ('svr', LinearSVR(random_state=42))\n",
-    "]\n",
-    "regressor = StackingRegressor(\n",
-    "    estimators=estimators,\n",
-    "    final_estimator = RandomForestRegressor(\n",
-    "        n_estimators=6,\n",
-    "        random_state=42\n",
-    "    )\n",
-    ")\n",
-    "regressor.fit(featuresTrain, labelsTrain)"
+    "poly_regs = PolynomialFeatures(degree = 2)  \n",
+    "x_poly = poly_regs.fit_transform(featuresTrain)  \n",
+    "regressor = LinearRegression()  \n",
+    "regressor.fit(x_poly, labelsTrain)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "e0779b3c",
+   "execution_count": 43,
+   "id": "4d75472e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainPredictions = regressor.predict(featuresTrain)\n",
-    "testPredictions = regressor.predict(featuresTest)"
+    "trainPredictions = regressor.predict(poly_regs.fit_transform(featuresTrain))\n",
+    "testPredictions = regressor.predict(poly_regs.fit_transform(featuresTest))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "3e8c92e9",
+   "execution_count": 44,
+   "id": "b9c32a30",
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +472,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for training set \n",
-      "RMSE 4.751407595318329\n",
-      "R2 Score 0.7248439400935411\n"
+      "RMSE 2.3584641935671273\n",
+      "R2 Score 0.9322057155811858\n"
      ]
     }
    ],
@@ -518,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "27b4c5a5",
+   "execution_count": 45,
+   "id": "469c52c6",
    "metadata": {},
    "outputs": [
     {
@@ -527,8 +496,8 @@
      "output_type": "stream",
      "text": [
       "The model performance for test set \n",
-      "RMSE 4.654944158307279\n",
-      "R2 Score 0.7558809554156798\n"
+      "RMSE 3.671453127481691\n",
+      "R2 Score 0.8481381498061001\n"
      ]
     }
    ],
